Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-136235

Qt 6.8.3 A signal 11 (SIGSEGV) crash observed while running qtquickview_kotlin sample application (Android 11 / API 30 )

XMLWordPrintable

    • Android
    • 919e9689f (dev), b1531dca9 (6.10), 7bf0a1a34 (6.9), 9216e3710 (tqtc/lts-6.8)
    • 2025wk20s1QtforAndroid, 2025wk22s1-2QtforAndroid, 2025wk24s2QtforAndroid, 2025wk26s2QtforAndroid

      A customer is evaluating Qt and tried running qtquickview_kotlin app on the device (Qt 6.8.3 / Android 11 / API 30).

      Following changes were made to the qtquickview_kotlin app

      1. Added one property myText  in Main.qml and set it as text to Text widget having id helloText
      2. In MainActivity.kt file, called onClickListener function at every 100 ms, updating two Main.qml property, colorStringFormat and myText

      The attachment contains crash stack trace, Original_Main.qml and Original_MainActivity.kt file and updated QT_Sample_Main_updated.qml and QT_Sample_MainActivity_Updated.kt file.

       

        1. adbShell_getprop .txt
          59 kB
          Srikanta Urs
        2. crash-android11-pixel4a.txt
          178 kB
          Rami Potinkara
        3. pixel8android14-emulator-crash2.txt
          17 kB
          Rami Potinkara
        4. Qt_Android_Crash_MainActivity.zip
          9 kB
          Nitish Davey
        For Gerrit Dashboard: QTBUG-136235
        # Subject Branch Project Status CR V

            pevirkku Petri Virkkunen
            ndavey Nitish Davey
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: