QQ4A: Fix crash when rapidly writing and reading QML properties

QtQuickViewContent calls to QMetaProperty functionality from the Android thread was leading to SIGSEGV crashes

Fixes: QTBUG-136235
Pick-to: 6.8
Change-Id: Ib1fcebf455b12eee6e7f17fea3235f50d156c60c
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
(cherry picked from commit 919e9689ff3024b0187f98bff29fd872871aa373)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit b1531dca9eaf059526f5562bec5c767980711c74)