src/quick/platform/android/qandroidquickviewembedding.cpp
@@ -100,7 +100,6 @@ namespace QtAndroidQuickViewEmbedding
             return;
         }
 
-        QMetaProperty metaProperty = rootMetaObject->property(propertyIndex);
         const QJniObject propertyValue(value);
         const QVariant variantToWrite = QAndroidTypeConverter::toQVariant(propertyValue);
 
@@ -108,7 +107,12 @@ namespace QtAndroidQuickViewEmbedding
             qWarning("Setting the property type of %s is not supported.",
                      propertyValue.className().data());
         } else {
-            metaProperty.write(rootObject, variantToWrite);
+            QMetaObject::invokeMethod(rootObject,
+                [metaProperty = rootMetaObject->property(propertyIndex),
+                 rootObject = rootObject,
+                 variantToWrite] {
+                    metaProperty.write(rootObject, variantToWrite);
+                });
         }
     }
 
@@ -134,7 +138,15 @@ namespace QtAndroidQuickViewEmbedding
         }
 
         QMetaProperty metaProperty = rootMetaObject->property(propertyIndex);
-        const QVariant propertyValue = metaProperty.read(rootObject);
+        QVariant propertyValue;
+        if (QCoreApplication::instance()->thread()->isCurrentThread()) {
+            propertyValue = metaProperty.read(rootObject);
+        } else {
+            QMetaObject::invokeMethod(rootObject,
+                [&propertyValue, &metaProperty, rootObject = rootObject] {
+                    propertyValue = metaProperty.read(rootObject);
+                }, Qt::BlockingQueuedConnection);
+        }
         jobject jObject = QAndroidTypeConverter::toJavaObject(propertyValue, env);
         if (!jObject) {
             qWarning("Property %s cannot be converted to a supported Java data type.",
